@@ -946,6 +946,7 @@ static int rpmlibMarkers(Header h)
     he->c = 1;
     xx = headerPut(h, he, 0);
 
+if (!(_rpmbuildFlags & 4)) {
     val = rpmlibTimestamp();
     he->tag = RPMTAG_RPMLIBTIMESTAMP;
     he->t = RPM_UINT32_TYPE;
@@ -966,6 +967,7 @@ static int rpmlibMarkers(Header h)
     he->p.ui32p = &val;
     he->c = 1;
     xx = headerPut(h, he, 0);
+}
 
     he->tag = RPMTAG_BUILDHOST;
     he->t = RPM_STRING_TYPE;
@@ -1034,6 +1036,7 @@ rpmRC packageBinaries(Spec spec)
 	he->c = 1;
 	xx = headerPut(pkg->header, he, 0);
 
+if (!(_rpmbuildFlags & 4)) {
 	if (spec->sourcePkgId != NULL) {
 	    he->tag = RPMTAG_SOURCEPKGID;
 	    he->t = RPM_BIN_TYPE;
@@ -1041,6 +1044,7 @@ rpmRC packageBinaries(Spec spec)
 	    he->c = 16;
 	    xx = headerPut(pkg->header, he, 0);
 	}
+}
 	
 	{   const char *binFormat = rpmGetPath("%{_rpmfilename}", NULL);
 	    char *binRpm, *binDir;
